--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 /build
 
 # electron builds
-/release
+/dist
 
 # misc
 .DS_Store
@@ -40,4 +40,5 @@ docs
 cypress/videos
 cypress/screenshots
 
+# eslint cache
 .eslintcache
